# parakeet.cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  framework.cpp  framework.h  framework_common.cpp  framework_def.h  framework_model.cpp  framework_model.h  framework_nn.cpp  framework_nn.h  main.cpp  parakeet.cpp  parakeet.h
perf/: CMakeLists.txt  perf_conv2d.cpp
scripts/: generate_input_data.py  generate_parakeet_gguf.py
src/: CMakeLists.txt  framework.cpp  framework.h  framework_common.cpp  framework_common.h  framework_model.cpp  framework_nn.cpp  framework_nn.h  main.cpp  parakeet.cpp  parakeet.h
